Move q-bar to top (header redesign)
* Decrease --q-space-base to 8px

* Remove q-bar from top level

* Add q-bar to index, feed, item-overview and editor page

* Move q-bar to top

* Use slot in q-bar to show back button on specific pages

* Define min-width for icon-button with text

* Move q-status-bar to q-bar

* Show logo only on index page

* Define height of q-bar based on --q-space-base

* Add updated back button

* Move status-bar to the right and show account-button only on index page

* Make some style adjustments after change of space-base

* Change color of border

* Style adjustment of q-bar

* Fix padding left and right of q-bar

* Better handle q-bar buttons on small screens

* Revert --q-space-base back to 16px

* Display text in save and activate/deactivate buttons

--- a/client/src/elements/organisms/q-bar.html
+++ b/client/src/elements/organisms/q-bar.html
@@ -1,13 +1,15 @@
 <template>
   <require from="./q-bar.css"></require>
-  <section class="q-bar__section q-bar__section">
-    <a route-href="route: index" if.bind="router.currentInstruction.config.name !== 'index'" class="q-bar__item">
-      <button-secondary icon="logo" icon-size="big"></button-secondary>
-    </a>
+  <section class="q-bar__left">
+    <slot name="back-button"></slot>
   </section>
-  <language-switcher></language-switcher>
-  <section class="q-bar__section q-bar__section q-bar__user">
-    <button-secondary if.bind="user.isLoggedIn" click.delegate="showHelp()" icon="help" icon-size="big" class="q-bar__item"></button-secondary>
-    <button-secondary if.bind="user.isLoggedIn" click.delegate="showAccountModal()" class="q-bar__item">${user.data.initials}</button-secondary>
+  <section class="q-bar__center">
+    <slot name="logo"></slot>
+  </section>
+  <section class="q-bar__right">
+    <slot name="tool-status-bar"></slot>
+    <slot name="language-switcher"></slot>
+    <slot name="account-button"></slot>
+    <button-secondary class="q-bar__help" if.bind="user.isLoggedIn" click.delegate="showHelp()" icon="help" icon-size="big"></button-secondary>
   </section>
 </template>
