--- a/client/src/elements/item-preview/preview-container.html
+++ b/client/src/elements/item-preview/preview-container.html
@@ -19,14 +19,6 @@
       padding: calc(var(--q-space-base) * 2);
     }
 
-    .preview-text {
-      margin: 0;
-    }
-
-    .preview-q-element {
-      margin-top: calc(var(--q-space-base) * 2);
-    }
-
     .preview-note {
       font-size: var(--q-text-size);
       color: var(--q-text-ultralight-color);
@@ -39,19 +31,7 @@
   <div class="preview-element-container">
     <div class="preview-element-container__background">
       <div class="preview-element" css="width: ${width}px; background-color: ${previewColor};">
-        <div>
-          <p class="q-text preview-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-            magna aliquyam erat, sed diam voluptua.</p>
-        </div>
-        <div class="preview-q-element" ref="previewElement"></div>
-        <div>
-          <p class="q-text preview-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-            magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-            gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
-            elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-            vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
-            Lorem ipsum dolor sit amet.</p>
-        </div>
+        <div ref="previewElement"></div>
       </div>
     </div>
   </div>
