Improve style of radio-button-group

--- a/client/src/elements/molecules/radio-button-group.html
+++ b/client/src/elements/molecules/radio-button-group.html
@@ -2,7 +2,7 @@
   <require from="./radio-button-group.css"></require>
   <div class="radio-button-group__option" repeat.for="option of options">
     <input type="radio" id="button-${option.value}" value.bind="option.value" checked.bind="value" matcher.bind="valueMatcher">
-    <label for="button-${option.value}">
+    <label class="q-text" for="button-${option.value}">
       ${option.text}
     </label>
   </div>
