Change language in radio-button-group

--- a/client/src/elements/item-preview/item-preview.html
+++ b/client/src/elements/item-preview/item-preview.html
@@ -5,7 +5,7 @@
 
   <form class="item-preview__settings" if.bind="initialised">
     <div>
-      <label class="q-text-small q-text--light" t="general.previewSizeLabel"></label>
+      <label class="q-text-small q-text--light" t="preview.sizeLabel"></label>
       <radio-button-group options.bind="sizeOptions" value.two-way="previewWidthProxy.width"></radio-button-group>
     </div>
   </form>
