Change language in radio-button-group

--- a/client/src/pages/editor.html
+++ b/client/src/pages/editor.html
@@ -15,7 +15,7 @@
         </form>
       </section>
       <section>
-        <h2 t="general.preview"></h2>
+        <h2 t="preview.title"></h2>
         <div class="editor__preview">
           <div class="editor__options" if.bind="optionsSchema">
             <form ref="optionsForm" class="q-form" validate>
