--- a/client/src/elements/item-preview/item-preview.html
+++ b/client/src/elements/item-preview/item-preview.html
@@ -9,6 +9,9 @@
       <radio-button-group options.bind="sizeOptions" value.two-way="previewWidthProxy.width"></radio-button-group>
     </div>
   </form>
-  <preview-container ref="previewContainer" width.one-way="previewWidthProxy.width" rendering-info.one-way="renderingInfo"
-    target.one-way="targetProxy.target" error.bind="error"></preview-container>
+  <div class="item-preview__container">
+    <preview-container ref="previewContainer" width.one-way="previewWidthProxy.width" rendering-info.one-way="renderingInfo"
+      target.one-way="targetProxy.target" error.bind="error"></preview-container>
+    <notification notification.bind="notification"></notification>
+  </div>
 </template>
