--- a/client/src/elements/item-preview/preview-container.html
+++ b/client/src/elements/item-preview/preview-container.html
@@ -15,7 +15,7 @@
     .preview-element {
       margin: auto;
       width: 50%;
-      min-height: calc(350px - var(--q-space-base) * 2);
+      min-height: calc(370px - var(--q-space-base) * 2);
       box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
       padding: var(--q-space-base);
     }
@@ -24,7 +24,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: calc(350px - var(--q-space-base) * 6);
+      height: calc(370px - var(--q-space-base) * 6);
       color: var(--q-color-error);
       background-color: var(--q-color-gray-2);
       padding: calc(var(--q-space-base) * 2) calc(var(--q-space-base) * 3);
@@ -34,22 +34,13 @@
     .preview-element--error-text {
       font-weight: normal;
     }
-
-    .preview-note {
-      font-size: var(--q-text-size);
-      color: var(--q-text-ultralight-color);
-      text-align: center;
-      max-width: 300px;
-      margin: 0 auto;
-    }
   </style>
-  <div class="preview-note" if.bind="!renderingInfo && noRenderingInfoText">${noRenderingInfoText}</div>
   <div class="preview-element-container">
     <div class="preview-element-container__background">
       <div class="preview-element" css="width: ${width}px; background-color: ${previewColor};">
         <div ref="previewElement"></div>
         <div class="preview-element--error-box" show.bind="error">
-          <h4 class="preview-element--error-text">${'notifications.previewError' & t}</h4>
+          <h4 class="preview-element--error-text">${'preview.error' & t}</h4>
         </div>
       </div>
     </div>
