--- a/client/src/elements/schema-editor/schema-editor-wrapper.html
+++ b/client/src/elements/schema-editor/schema-editor-wrapper.html
@@ -7,8 +7,8 @@
   <div if.bind="getType(schema) === 'string'" class="schema-editor-block">
     <require from="./schema-editor-wrapper.css"></require>
     <require from="./schema-editor-string"></require>
-    <schema-editor-string schema.bind="schema" data.two-way="data" change.bind="change" required.bind="required" input.delegate="validate($event.target, $event.type)"
-      focus.trigger="validate($event.target, $event.type)"></schema-editor-string>
+    <schema-editor-string schema.bind="schema" data.two-way="data" change.bind="change" required.bind="required" input.delegate="validate($event.target)"
+      focusin.delegate="validate($event.target)"></schema-editor-string>
   </div>
 
   <div if.bind="getType(schema) === 'textarea'" class="schema-editor-block">
