--- a/client/src/elements/schema-editor/schema-editor-table.html
+++ b/client/src/elements/schema-editor/schema-editor-table.html
@@ -2,6 +2,10 @@
   <require from="./schema-editor-table.css"></require>
   <label>
     ${schema["title"]}
+    <span show.bind="required">
+      <span>- </span>
+      <span style="color: var(--q-color-error)">${'editor.required' & t}</span>
+    </span>
     <div ref="tableContainerElement"></div>
   </label>
   <button-secondary if.bind="options.allowTranspose" click.delegate="transpose()" icon="transpose" style="width: 36px;"></button-secondary>
