--- a/client/src/elements/item-preview/preview-container.html
+++ b/client/src/elements/item-preview/preview-container.html
@@ -22,12 +22,13 @@
 
     .preview-element--error-box {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: calc(370px - var(--q-space-base) * 6);
       color: var(--q-color-error);
       background-color: var(--q-color-gray-2);
-      padding: calc(var(--q-space-base) * 2) calc(var(--q-space-base) * 3);
+      padding: calc(var(--q-space-base) * 2) calc(var(--q-space-base) * 2);
       text-align: center;
     }
 
@@ -40,7 +41,7 @@
       <div class="preview-element" css="width: ${width}px; background-color: ${previewColor};">
         <div ref="previewElement"></div>
         <div class="preview-element--error-box" show.bind="error">
-          <h4 class="preview-element--error-text">${'preview.error' & t}</h4>
+          <h4 class="preview-element--error-text">${'preview.generalError.title' & t} ${'preview.generalError.body' & t}</h4>
         </div>
       </div>
     </div>
