--- a/client/src/elements/schema-editor/schema-editor-base64image.html
+++ b/client/src/elements/schema-editor/schema-editor-base64image.html
@@ -2,6 +2,10 @@
   <require from="./schema-editor-base64image.css"></require>
   <label>
     <span>${schema["title"]}</span>
+    <span show.bind="required">
+      <span>- </span>
+      <span style="color: var(--q-color-error)">${'editor.required' & t}</span>
+    </span>
     <input type="file" accept="image/png" class="schema-editor-base64image__input" required.bind="required" change.delegate="handleChange($event)">
     <img if.bind="data" src="${data}" style="height: 30px;">
   </label>
