--- a/client/src/elements/schema-editor/schema-editor-link.html
+++ b/client/src/elements/schema-editor/schema-editor-link.html
@@ -1,6 +1,11 @@
 <template>
   <label>
     ${schema.properties.url["title"] || ''}
-    <input type="url" placeholder.to-view="options.placeholder || ''" required.bind="required" value.bind="data.url" ref="urlInput" keyup.delegate="handleUrlChange() & debounce:800">
-  <label>
+    <span show.bind="required">
+      <span>- </span>
+      <span style="color: var(--q-color-error)">${'editor.required' & t}</span>
+    </span>
+    <input type="url" placeholder.to-view="options.placeholder || ''" required.bind="required" value.bind="data.url" ref="urlInput"
+      keyup.delegate="handleUrlChange() & debounce:800">
+    <label>
 </template>
