--- a/client/src/elements/schema-editor/schema-editor-number.html
+++ b/client/src/elements/schema-editor/schema-editor-number.html
@@ -1,6 +1,11 @@
 <template class="schema-editor-input">
   <label>
     ${schema["title"]}
-    <input type="number" placeholder.to-view="options.placeholder || ''" required.bind="required" value.bind="data | forceNumber" step.bind="options.step" keyup.delegate="change() & debounce:800">
-  <label>
+    <span show.bind="required">
+      <span>- </span>
+      <span style="color: var(--q-color-error)">${'editor.required' & t}</span>
+    </span>
+    <input type="number" placeholder.to-view="options.placeholder || ''" required.bind="required" value.bind="data | forceNumber"
+      step.bind="options.step" keyup.delegate="change() & debounce:800">
+    <label>
 </template>
