--- a/client/src/elements/schema-editor/schema-editor-wrapper.html
+++ b/client/src/elements/schema-editor/schema-editor-wrapper.html
@@ -8,7 +8,7 @@
     <require from="./schema-editor-wrapper.css"></require>
     <require from="./schema-editor-string"></require>
     <schema-editor-string schema.bind="schema" data.two-way="data" change.bind="change" required.bind="required" input.delegate="validate($event.target)"
-      focusin.delegate="validate($event.target)"></schema-editor-string>
+      invalid.capture="validate($event.target)"></schema-editor-string>
   </div>
 
   <div if.bind="getType(schema) === 'textarea'" class="schema-editor-block">
@@ -74,7 +74,7 @@
   <div if.bind="getType(schema) === 'table'" class="schema-editor-block">
     <require from="./schema-editor-table"></require>
     <schema-editor-table schema.bind="schema" data.two-way="data" change.bind="change" required.bind="required" input.delegate="validate($event.target)"
-      focusin.delegate="validate($event.target)"></schema-editor-table>
+      invalid.capture="validate($event.target)"></schema-editor-table>
   </div>
 
   <div if.bind="getType(schema) === 'files'" class="schema-editor-block">
