use icon for button, outsourced minRows variable

--- a/client/src/elements/schema-editor/schema-editor-table.html
+++ b/client/src/elements/schema-editor/schema-editor-table.html
@@ -4,5 +4,5 @@
     ${schema["title"]}
     <div ref="tableContainerElement"></div>
   </label>
-  <button-secondary if.bind="options.allowTranspose" click.delegate="transpose()">${ 'editor.transpose' & t }</button-secondary>
+  <button-secondary if.bind="options.allowTranspose" click.delegate="transpose()" icon="transpose" style="width: 36px;"></button-secondary>
 </template>
