--- a/client/src/pages/feed.html
+++ b/client/src/pages/feed.html
@@ -12,7 +12,7 @@
         <div class="feed-preview-block" repeat.for="item of items">
           <div class="q-text">ID:
             <a route-href="route: editor; params.bind: {tool: item.conf.tool, id: item.id}">Edit this item</a> Tool: ${item.conf.tool} </div>
-          <preview-container width="320" id="preview-container" rendering-info.bind="renderingInfos[item.id]"></preview-container>
+          <preview-container width="320" id="preview-container" rendering-info.bind="renderingInfos[item.id]" target.bind="currentTarget"></preview-container>
         </div>
       </section>
       <button-secondary style="width: 100%;" click.delegate="loadMore()">
