Add icons to medium and high priority notifications

--- a/client/src/elements/organisms/notification.html
+++ b/client/src/elements/organisms/notification.html
@@ -1,7 +1,14 @@
 <template>
   <require from="./notification.css"></require>
-  <div class="notification notification__${notification.priority}" show.bind="notification.message.title">
-    <h5 class="notification__title">${notification.message.title}</h5>
-    <h6 class="notification__body">${notification.message.body}</h6>
+  <div class="notification notification--${notification.priority}" show.bind="notification.message.title">
+    <div class="notification__icon-container">
+      <span class="notification__icon notification__icon--${notification.priority}" if.bind="hasIcon">
+        <box-icon icon.bind="iconName"></box-icon>
+      </span>
+    </div>
+    <div class="notification__content">
+      <h5 class="notification__title">${notification.message.title}</h5>
+      <h6 class="notification__body">${notification.message.body}</h6>
+    </div>
   </div>
 </template>
