--- a/client/src/elements/item-preview/preview-container.html
+++ b/client/src/elements/item-preview/preview-container.html
@@ -6,16 +6,13 @@
       overflow-x: auto;
       overflow-y: var(--preview-container-overflow-y, auto);
       border: solid 1px var(--q-color-gray-4);
-    }
-
-    .preview-element-container__background {
       background-color: var(--q-color-gray-3);
     }
 
     .preview-element {
       margin: auto;
-      width: 50%;
-      min-height: calc(350px - var(--q-space-base) * 2);
+      height: 100%;
+      min-height: calc(100% - var(--q-space-base) * 2);
       box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
       padding: var(--q-space-base);
     }
@@ -24,7 +21,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: calc(350px - var(--q-space-base) * 6);
+      height: calc(100% - var(--q-space-base) * 6);
       color: var(--q-color-error);
       background-color: var(--q-color-gray-2);
       padding: calc(var(--q-space-base) * 2) calc(var(--q-space-base) * 3);
@@ -45,12 +42,10 @@
   </style>
   <div class="preview-note" if.bind="!renderingInfo && noRenderingInfoText">${noRenderingInfoText}</div>
   <div class="preview-element-container">
-    <div class="preview-element-container__background">
-      <div class="preview-element" css="width: ${width}px; background-color: ${previewColor};">
-        <div ref="previewElement"></div>
-        <div class="preview-element__error-box" show.bind="error">
-          <h4 class="preview-element__error-text">${'notifications.previewError' & t}</h4>
-        </div>
+    <div class="preview-element" css="width: ${width}px; background-color: ${previewColor};">
+      <div ref="previewElement"></div>
+      <div class="preview-element__error-box" show.bind="error">
+        <h4 class="preview-element__error-text">${'notifications.previewError' & t}</h4>
       </div>
     </div>
   </div>
