--- a/client/src/elements/item-preview/item-preview.html
+++ b/client/src/elements/item-preview/item-preview.html
@@ -2,13 +2,14 @@
   <require from="./preview-container"></require>
   <require from="./item-preview.css"></require>
   <require from="../molecules/radio-button-group"></require>
-
-  <form class="item-preview__settings" if.bind="initialised">
-    <div>
-      <label class="q-text-small q-text--light">${'preview.sizeLabel' & t}</label>
-      <radio-button-group options.bind="sizeOptions" value.two-way="previewWidthProxy.width"></radio-button-group>
-    </div>
-  </form>
-  <preview-container ref="previewContainer" width.one-way="previewWidthProxy.width" rendering-info.one-way="renderingInfo"
-    target.one-way="targetProxy.target" error.bind="error"></preview-container>
+  <div class="item-preview__holder">
+    <form class="item-preview__settings" if.bind="initialised">
+      <div>
+        <label class="q-text-small q-text--light">${'preview.sizeLabel' & t}</label>
+        <radio-button-group options.bind="sizeOptions" value.two-way="previewWidthProxy.width"></radio-button-group>
+      </div>
+    </form>
+    <preview-container ref="previewContainer" width.one-way="previewWidthProxy.width" rendering-info.one-way="renderingInfo"
+      target.one-way="targetProxy.target" error.bind="error"></preview-container>
+  </div>
 </template>
