--- a/client/src/elements/item-preview/preview-container.html
+++ b/client/src/elements/item-preview/preview-container.html
@@ -2,7 +2,6 @@
   <require from="./preview-container.css"></require>
   <style>
     .preview-element-container {
-      height: 100%;
       overflow-x: auto;
       overflow-y: var(--preview-container-overflow-y, auto);
       border: solid 1px var(--q-color-gray-4);
@@ -41,7 +40,7 @@
   </style>
   <div class="preview-note" if.bind="!renderingInfo && noRenderingInfoText">${noRenderingInfoText}</div>
   <div class="preview-element-container">
-    <div class="preview-element" css="width: ${width}px; color: ${previewColor}; background-color: ${previewColor}; height: 100%;">
+    <div class="preview-element" css="width: ${width}px; color: ${previewColor}; background-color: ${previewColor};">
       <div ref="previewElement"></div>
       <div class="preview-element__error-box" show.bind="error">
         <h4 class="preview-element__error-text">${'notifications.previewError' & t}</h4>
