--- a/client/src/elements/item-preview/preview-container.html
+++ b/client/src/elements/item-preview/preview-container.html
@@ -10,7 +10,7 @@
 
     .preview-element {
       margin: auto;
-      min-height: calc(100% - var(--q-space-base) * 2);
+      min-height: 350px;
       box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
       padding: var(--q-space-base);
     }
