(item-preview) maintain rendering-info loading status state to hide preview while new one is loading

--- a/client/src/elements/item-preview/item-preview.html
+++ b/client/src/elements/item-preview/item-preview.html
@@ -10,6 +10,6 @@
       </div>
     </form>
     <preview-container ref="previewContainer" width.one-way="previewWidthProxy.width" rendering-info.one-way="renderingInfo"
-      target.one-way="targetProxy.target" error.bind="error"></preview-container>
+      target.one-way="targetProxy.target" error.bind="error" loading-status.bind="loadingStatus"></preview-container>
   </div>
 </template>
