--- a/client/src/elements/item-preview/preview-container.html
+++ b/client/src/elements/item-preview/preview-container.html
@@ -41,7 +41,7 @@
   <div class="preview-note" if.bind="!renderingInfo && noRenderingInfoText">${noRenderingInfoText}</div>
   <div class="preview-element-container">
     <div class="preview-element" css="width: ${width}px; color: ${previewColor}; background-color: ${previewColor};">
-      <div ref="previewElement"></div>
+      <div ref="previewElement" css="${loadingStatus === 'loading' ? 'opacity: 0' : 'opacity: 1'};"></div>
       <div class="preview-element__error-box" show.bind="error">
         <h4 class="preview-element__error-text">${'notifications.previewError' & t}</h4>
       </div>
