Change font to Roboto

--- a/client/src/app.html
+++ b/client/src/app.html
@@ -1,5 +1,5 @@
 <template>
-  <require from="https://fonts.googleapis.com/css?family=Inconsolata|Roboto!css"></require>
+  <require from="https://fonts.googleapis.com/css?family=Roboto!css"></require>
   <require from="./styles/config.css"></require>
   <require from="./styles/layout.css"></require>
   <require from="./styles/fonts.css"></require>
