--- a/client/src/elements/item-preview/preview-container.html
+++ b/client/src/elements/item-preview/preview-container.html
@@ -12,17 +12,17 @@
       margin: auto;
       min-height: 350px;
       box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
-      padding: var(--q-space-base);
+      padding: calc(var(--q-space-base) * 2);
     }
 
     .preview-element__error-box {
       display: flex;
       justify-content: center;
       align-items: center;
-      height: calc(100% - var(--q-space-base) * 6);
+      height: calc(100% - var(--q-space-base) * 12);
       color: var(--q-color-error);
       background-color: var(--q-color-gray-2);
-      padding: calc(var(--q-space-base) * 2) calc(var(--q-space-base) * 3);
+      padding: calc(var(--q-space-base) * 4) calc(var(--q-space-base) * 6);
       text-align: center;
     }
 
