Add priority value to notifications and take it into account while sorting

--- a/client/src/elements/molecules/notification.html
+++ b/client/src/elements/molecules/notification.html
@@ -2,7 +2,7 @@
   <require from="./notification.css"></require>
   <div class="notification notification--${notification.priority}" show.bind="notification.message.title">
     <div class="notification__icon-container">
-      <span class="notification__icon notification__icon--${notification.priority}" if.bind="hasIcon">
+      <span class="notification__icon notification__icon--${notification.priority.type}" if.bind="hasIcon">
         <box-icon icon.bind="iconName"></box-icon>
       </span>
     </div>
