Visually highlite preview section in editor

--- a/client/src/pages/editor.html
+++ b/client/src/pages/editor.html
@@ -20,7 +20,7 @@
           <button ref="formSubmitButton" type="submit" style="display: none;"></button>
         </form>
       </section>
-      <section>
+      <section class="editor__preview-container">
         <h2>${ 'preview.title' & t }</h2>
         <div class="editor__preview">
           <div class="editor__options" if.bind="optionsSchema">
