--- a/client/src/elements/schema-editor/schema-editor.html
+++ b/client/src/elements/schema-editor/schema-editor.html
@@ -6,6 +6,8 @@
       schema.bind="schema"
       data.two-way="data"
       change.bind="change"
-      no-object-title="true">
+      no-object-title="true"
+      notifications.bind="notifications"
+      show-notifications.bind="showNotifications">
   </schema-editor-wrapper>
 </template>
