Fix preview notification column

--- a/client/src/elements/item-preview/item-preview.html
+++ b/client/src/elements/item-preview/item-preview.html
@@ -12,7 +12,7 @@
     <div class="item-preview__container">
       <preview-container ref="previewContainer" width.one-way="previewWidthProxy.width" rendering-info.one-way="renderingInfo"
         target.one-way="targetProxy.target" error.bind="error" loading-status.bind="loadingStatus"></preview-container>
-      <div>
+      <div class="item-preview__notification">
         <notification notification.bind="notification"></notification>
         <!-- this is used to show the notifications from options -->
         <slot name="notifications"></slot>
